--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,3 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/css/qq.css": "/css/qq.css"
+    "/js/app.js": "/js/app.js"
 }
-z
